@@ -27,6 +27,7 @@ no_index:
 requires:
   CSS::Struct::Output::Raw: 0
   Encode: 0
+  Error::Pure: 0
   Plack::Component: 0
   Plack::Util::Accessor: 0
   Readonly: 0
