@@ -20,6 +20,7 @@ readme_from 'HTML.pm';
 recursive_author_tests('xt');
 requires 'CSS::Struct::Output::Raw' => 0;
 requires 'Encode' => 0;
+requires 'Error::Pure' => 0;
 requires 'Plack::Component' => 0;
 requires 'Plack::Util::Accessor' => 0;
 requires 'Tags::HTML::Page::Begin' => 0.11;
