@@ -1,4 +1,6 @@
 0.04
+ - Rewrite prepare_app() and creating of default 'tags' and 'css' objects.
+   Add errors for bad objects.
 
 0.03 2022-05-11T10:26:21+02:00
  - Fix copyright years.
